fixed background on mobile

--- a/src/scss/layout/hero.scss
+++ b/src/scss/layout/hero.scss
@@ -2,16 +2,18 @@
   width: 100%;
   height: 432px;
 
+  background-image: url('../img/hero/mobile/1x/heroBackground.png');
   background-size: 100% 100%;
-  background: url('../img/hero/mobile/1x/heroBackground.png') no-repeat;
+  background-repeat: no-repeat;
 
   @include image-2x('../img/hero/mobile/2x/heroBackground.png', 100%, 432px);
 
   @include media(desktop) {
     height: 625px;
 
-    background: url('../img/hero/desktop/1x/heroBackground.png') no-repeat;
+    background-image: url('../img/hero/desktop/1x/heroBackground.png');
     background-size: 100% 100%;
+    background-repeat: no-repeat;
     @include image-2x('../img/hero/desktop/2x/heroBackground.png', 100%, 625px);
   }
 }
@@ -67,7 +69,7 @@
 
 #palmIcon {
   position: absolute;
-  left: 68px;
+  right: 97px;
   bottom: 0px;
   width: 125px;
   height: 116px;
@@ -75,7 +77,7 @@
   @include media(desktop) {
     right: 320px;
     bottom: 10px;
-    width: 270px;
+    width: 370px;
     height: 344px;
   }
 }
@@ -99,5 +101,22 @@
   @include media(desktop) {
     right: 46px;
     bottom: -109px;
+  }
+}
+
+#cloudHeader {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+#cloudHero {
+  position: absolute;
+  right: 0px;
+  top: 64px;
+
+  @include media(desktop) {
+    right: 0px;
+    top: 70px;
   }
 }
